# news-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  application.py  changelog.md  config.yaml  docker-compose.yaml  gnews.json  google news api rapid api output .txt  google_News test.txt  google_news.json  main.py  newsdata_news.json  pyproject.toml  requirements_dev.txt  setup.py  template.py  test.py  test_cnn_scrapper.ipynb  test_cnn_scrapper.py  test_db.py  test_frontend.py
.devcontainer/: devcontainer.json
config/: config.yaml  db_config.yaml
core/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
core/config/: configuration.py
core/db/: __init__.py  db_exceptions.py  db_utils.py  news_tables.py
core/db/crud/: news_crud.py
core/frontend/: app.py
core/frontend/templates/: index.html  test.html
core/langchain_summariezer/: summary_chain.py
core/langchain_summarizer/: summary_chain.py
core/logging/: logger.py
core/pipeline/: five_05_model_evaluation.py  four_04_model_trainer.py  one_01_data_ingestion.py  prediction.py  three_03_data_transformation.py  two_02_data_validation.py
core/routers/: news_router.py
core/scapper/: base_scapper.py  cnn_scapper.py  scapper_utils.py
core/schema/: article.py  article_summary.py  base_schema.py
core/scrapper/: base_scrapper.py  cache.json  cache.py  cnn_scrapper.py  scrapper_utils.py
core/sources/apis/: base_api.py  gnews_api.py  googlenews_api.py  newsdata_api.py
core/sources/schema/: __init__.py  gnews_article.py  newsdata_article.py
core/utils/: common.py  rate_limiter.py  rate_limiter_easy.py
models/notebooks/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_Model_evaluation.ipynb  text_summerizer.ipynb  upload_model_to_huggingface.ipynb
src/: __init__.py  get_news.py  prediction.py  test_db.py
src/core/components/: data_transformation.py
src/core/config/: configuration.py
src/core/db/: __init__.py  db_exceptions.py  db_utils.py  news_table.py  news_tables.py  schemas.py
src/core/logging/: __init__.py  logger.py
src/core/news_api/: __init__.py  base_api.py  gnews_api.py  (+2 more)
src/data/: get_news.py
src/frontend/: app.py
templates/: index.html  result.html
(+22 files in other folders)
